<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llProfileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="24dp"
                android:layout_alignParentTop="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfilePicture"
                    android:layout_width="106dp"
                    android:layout_height="106dp"
                    android:src="@drawable/ic_profile"
                    android:layout_marginEnd="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:id="@+id/llFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="8dp">

                        <TextView
                            android:id="@+id/tvNumOfFollowers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textSize="18sp"
                            android:gravity="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/tvNumOfFollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textSize="18sp"
                            android:gravity="center" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="22sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="12dp"
                android:layout_below="@id/llProfileLayout"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="?android:textColorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_below="@id/tvUsername"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUserPosts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnEditProfile"
                android:layout_above="@id/btnSignOut"
                android:layout_marginVertical="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="12dp"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>