<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivCancel"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic_cancel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/tvAppBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textSize="24sp"
                    android:textColor="@color/color_application"
                    android:layout_marginHorizontal="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivCancel"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivAccept"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="?android:selectableItemBackground"
                    android:src="@drawable/ic_accept"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/color_application"
            app:layout_constraintBottom_toBottomOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_profile"
        android:layout_below="@id/appBarLayout"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/tvEditProfilePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_picture"
        android:textSize="20sp"
        android:textColor="@color/color_application"
        android:layout_below="@id/ivProfilePicture"
        android:gravity="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/username"
        android:textColorHint="@color/color_application"
        app:boxStrokeColor="@color/color_application"
        app:boxStrokeWidth="2dp"
        android:layout_below="@id/tvEditProfilePicture">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:nextFocusForward="@id/btnSubmit" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDeleteProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:layout_marginVertical="16dp"
        android:text="@string/delete_profile"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:backgroundTint="@color/error"
        android:layout_marginHorizontal="30dp"
        android:layout_alignParentBottom="true" />

    <ProgressBar
        android:id="@+id/pbProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/color_application"
        android:layout_centerInParent="true" />

</RelativeLayout>